# ableton-library

./: .gitignore  CODEBASE_GUIDE.md  Cargo.toml  README.md  package-lock.json  similarity_map.html
ai/: AGENTS.md  ARCHITECTURE.md  CONTEXT_BUNDLE.md  HUMAN.md  PROJECT_STATE.md  SIMILARITY_GRAPH_DESIGN.md  SKETCH_RENDER_HANDOFF.md  ai-context.sh
ai/archive/: AGENT.md  ARCHITECTURE.md  PROJECT_STATE.md
app/: index.html  package-lock.json  package.json  vite.config.ts
app/src/: App.tsx  PlayerBar.tsx  SimilarityMap.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs
crates/als-core/: Cargo.toml
crates/als-core/src/: lib.rs  model.rs  parser.rs  scan.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/ops/: Cargo.toml
crates/ops/src/: artist.rs  lib.rs  places.rs  proxy.rs  sample_index.rs  similarity.rs  sketch.rs  triage.rs
crates/previews/: Cargo.toml
crates/previews/src/: lib.rs  matching.rs  peaks.rs
crates/previews/src/sketch/: engine.rs  mod.rs  parser.rs
tools/: export_set.py  reference_extract.py  similarity_map.py  sketch_render.py
