[package]
name = "app"
version.workspace = true
edition.workspace = true

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
als-core = { path = "../../crates/als-core" }
indexer = { path = "../../crates/indexer" }
ops = { path = "../../crates/ops" }
previews = { path = "../../crates/previews" }
anyhow = "1"
chrono = "0.4"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tokio = { version = "1", features = ["time"] }
