[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ableton-scan"
path = "src/main.rs"

[dependencies]
als-core = { path = "../als-core" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
