[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ableton-scan"
path = "src/main.rs"

[dependencies]
als-core = { path = "../als-core" }
indexer = { path = "../indexer" }
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
serde_json = "1"
