[package]
name = "previews"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5", features = ["mp3", "aac", "isomp4", "aiff"] }
walkdir = "2"
quick-xml = { version = "0.31", features = ["serialize"] }
flate2 = "1"
hound = "3"
